NIFI-12933 Rearranged properties on GCP processors
Also used current API methods for relationships/properties collections